chore: server setup

--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ nat = "any"
 bootnodes = []
 discovery = true
 warp = true
-allow_ips = "all"
+allow_ips = "private"
 snapshot_peers = 0
 max_pending_peers = 64
 no_serve_light = false
