--- a/src/contracts/package.json
+++ b/src/contracts/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "server",
+  "name": "contracts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "node compile.js"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {},
   "dependencies": {
-    "web3": "^1.0.0-beta.46"
+    "solc": "^0.4.25"
   }
 }
