--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,10 @@ keys_path = "./parity/keys"
 identity = ""
 light = false
 
+[account]
+unlock = ["0x6d36bea3b2a5f6c6d6f046e89c34d040bb29cc6d"]
+password=["./pw.txt"]
+
 [network]
 port = 30303
 min_peers = 25
