--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ no_download = false
 no_consensus = false
 no_persistent_txqueue = false
 
-chain = "EQL"
+chain = "./chain.json"
 base_path = "./parity/base"
 db_path = "./parity/db"
 keys_path = "./parity/keys"
@@ -17,7 +17,7 @@ identity = ""
 light = false
 
 [account]
-unlock = ["0x6d36bea3b2a5f6c6d6f046e89c34d040bb29cc6d"]
+unlock = ["0x40aF1756e5320444494676AB9d9C11f4942D79C1", "0x6d36Bea3B2A5F6c6d6F046E89c34D040bb29cC6D"]
 password=["./pw.txt"]
 
 [network]
