--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "graphql": "^14.1.1",
+    "koa": "^2.7.0",
+    "koa-graphql": "^0.8.0",
+    "koa-router": "^7.4.0",
     "web3": "^1.0.0-beta.46"
   }
 }
