--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon --watch index.js"
+    "watch": "nodemon --watch graphql index.js"
   },
   "author": "",
   "license": "ISC",
