--- a/src/server/package.json
+++ b/src/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "graphql": "^14.1.1",
+    "graphql-subscriptions": "^1.0.0",
     "koa": "^2.7.0",
     "koa-graphql": "^0.8.0",
     "koa-router": "^7.4.0",
