--- a/src/server/package.json
+++ b/src/server/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.7.0",
     "koa-graphql": "^0.8.0",
     "koa-router": "^7.4.0",
+    "subscriptions-transport-ws": "^0.9.15",
     "web3": "^1.0.0-beta.46"
   },
   "devDependencies": {
