--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.5.0",
     "apollo-client": "^2.5.0",
+    "apollo-link-http": "^1.5.11",
     "apollo-link-state": "^0.4.2",
     "graphql": "^14.1.1",
-    "graphql-anywhere": "^4.2.0",
     "graphql-tag": "^2.10.1",
     "node-fetch": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.15",
